changes/5.16-rc1/3c92cb4cb60c71b574e47108ead8b6f0470850db
HID: playstation: fix return from dualsense_player_led_set_brightness()

brightness_set_blocking() callback expects function returning int. This fixes
the follwoing build failure:

drivers/hid/hid-playstation.c: In function ‘dualsense_player_led_set_brightness’:
drivers/hid/hid-playstation.c:885:1: error: no return statement in function returning non-void [-Werror=return-type]
 }
 ^

Signed-off-by: Jiri Kosina <jkosina@suse.cz>

